--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
