--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
@@ -26,6 +26,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.4",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
